add restart button

--- a/app/views/sliding-puzzle.jade
+++ b/app/views/sliding-puzzle.jade
@@ -16,4 +16,5 @@ html
     script(src='../js/web.js')
     figure.SlidingPuzzleBoard
       ul.SlidingPuzzle
-      figcaption A Sliding Puzzle
+      figcaption.state A Sliding Puzzle
+      figcaption.restart Restart
