fix http/https issue

--- a/app/views/sliding-puzzle.jade
+++ b/app/views/sliding-puzzle.jade
@@ -5,7 +5,7 @@ html
     // script>require=()=>({}); module={}; module.exports=()=>({})</script
     title Sliding Puzzle Quiz
   body
-    script(src='http://code.jquery.com/jquery-3.3.1.min.js', integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=', crossorigin='anonymous')
+    script(src='https://code.jquery.com/jquery-3.3.1.min.js', integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=', crossorigin='anonymous')
     script(src='//cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js')
     script(src='../js/sliding-puzzle.js')
     script.
